fixed card title overflow

--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ img {
 		position: absolute;
 		bottom: var(--gap-2);
 		left: 0;
-		width: 100%;
+		max-width: 100%;
 		padding: 0 var(--gap-2);
 	}
 
